--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-.hide{
+.hide {
     display: none;
 }
+
 /* header */
 header {
     max-width: 1440px;
@@ -113,34 +114,122 @@ a {
     padding-left: 200px;
 
 }
+
 /* Sponser-Container */
-main{
+main {
     /* max-width: 1047px; */
 }
-.sponser-img{
+
+.sponser-img {
     margin-bottom: 130px;
 }
 
-.sponser-container{
+.sponser-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid rgba(192, 204, 218 );
+    border: 1px solid rgba(192, 204, 218);
     padding: 30px;
     width: 1000px;
     margin-left: 125px;
 }
 
-.spons-container-img{
+.spons-container-img {
     padding-right: 61px;
 }
 
+/* Popular Collection */
+.popular-collection{
+    margin-bottom: 100px;
+}
+.popular-title {
+    color: rgb(58, 58, 58);
+    font-family: Poppins;
+    font-size: 1.75rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 40px;
+}
 
+.card-container {
+    width: 329px;
+    height: 476px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    background: rgb(255, 255, 255);
+}
+
+/* tripod-img */
+.tripod-img {
+    padding: 15px;
+}
+
+.card-title {
+    color: rgb(24, 25, 31);
+    font-family: Poppins;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin: 0;
+}
+
+.card-price {
+    color: rgba(0, 0, 0, 0.87);
+    font-family: Inter;
+    font-size: 1.6rem;
+    margin: 0;
+    padding-top: 5px;
+}
+
+.card-rating {
+    color: rgb(94, 99, 102);
+    font-family: Roboto;
+    font-size: 0.8rem;
+    font-weight: 700;
+    letter-spacing: 0.1px;
+    margin: 0;
+    padding-top: 5px;
+}
+
+.card-description {
+    color: rgb(120, 120, 133);
+    font-family: Inter;
+    font-size: 0.8rem;
+    font-weight: 700;
+    margin: 0;
+    width: 196px;
+    height: 61px;
+    padding-top: 5px;
+    letter-spacing: 1.8%;
+}
+
+.popular-collection-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+}
+
+.card-text {
+    padding-left: 15px;
+}
+
+.see-more{
+    color: rgba(224, 44, 109, 0.87);
+    display: flex;
+    justify-content: end;
+    padding-right: 155px;
+}
+.right-aro{
+    padding-left: 5px;
+    margin-top: 4px;
+    height: 15px;
+}
 /* small device responsive */
 @media screen and (max-width:576px) {
     header {
-        max-width: 360px;
+        max-width: 412px;
     }
+
     .nav-title {
         color: rgb(58, 58, 58);
         font-family: Poppins;
@@ -148,6 +237,7 @@ main{
         font-weight: 900;
         text-align: left;
     }
+
     .navber {
         padding-top: 20px;
         display: flex;
@@ -167,16 +257,21 @@ main{
         text-decoration: none;
 
     }
-    ul, li, a{
+
+    ul,
+    li,
+    a {
         padding-bottom: 5px;
     }
-    .nav-icon{
+
+    .nav-icon {
         padding-right: 40px;
         justify-items: center;
         align-items: center;
         justify-content: center;
     }
-    .header-btn{
+
+    .header-btn {
         margin-left: 70px;
     }
 
@@ -205,73 +300,77 @@ main{
     }
 
     .header-description {
-       max-width: 360px;
+        max-width: 360px;
         height: 80.9px;
         text-align: center;
         color: rgb(58, 58, 58);
         font-family: Poppins;
         font-weight: 300;
-        
+
     }
+
     .main-camera {
         position: relative;
         top: 0px;
         border: 0px dashed rgb(207, 198, 228);
     }
-    
+
     #header-right-img {
         border: 0px dashed rgb(207, 198, 228);
-    
+
     }
-    
-    
+
+
     .header-right-side-img {
         padding-left: 0px;
-    
+
     }
-    .circle{
+
+    .circle {
         padding-top: 30px;
         width: 100%;
         height: 100%;
-        
+
         position: relative;
         top: 150px;
     }
-    
+
     .header-r-s-i {
         padding-left: 0px;
-    
+
     }
-    .main-camera{
+
+    .main-camera {
         position: relative;
         top: -90px;
         width: 90%;
     }
+
     /* sponser  */
-    .sponser-img{
+    .sponser-img {
         margin-top: 300px;
         margin-bottom: 130px;
     }
-    
-    .sponser-container{
+
+    .sponser-container {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        border: 0px  ;
+        border: 0px;
         padding: 0px;
         width: 275px;
         margin-left: 30px;
     }
-    
-    .spons-container-img{
-        padding:5px ;
-        padding-bottom:15px ;
+
+    .spons-container-img {
+        padding: 5px;
+        padding-bottom: 15px;
 
         padding-right: 0px;
     }
-    
+
 
 
 
