--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+body{
+    max-width: 1330px;
+}
 
 .hide {
     display: none;
@@ -139,9 +142,10 @@ main {
 }
 
 /* Popular Collection */
-.popular-collection{
+.popular-collection {
     margin-bottom: 100px;
 }
+
 .popular-title {
     color: rgb(58, 58, 58);
     font-family: Poppins;
@@ -213,17 +217,51 @@ main {
     padding-left: 15px;
 }
 
-.see-more{
+.see-more {
     color: rgba(224, 44, 109, 0.87);
     display: flex;
     justify-content: end;
     padding-right: 155px;
 }
-.right-aro{
+
+.right-aro {
     padding-left: 5px;
     margin-top: 4px;
     height: 15px;
 }
+
+/* feature-container */
+.feature-container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.feature-title {
+    color: rgb(10, 8, 38);
+    font-family: Poppins;
+    font-size: 2.3rem;
+    font-weight: 700;
+}
+
+.feature-description {
+    color: rgb(108, 108, 108);
+    font-family: Poppins;
+    font-weight: 700;
+    width: 501px;
+    height: 88px;
+}
+
+
+.feature-btn {
+    background: rgb(224, 44, 109);
+    color: rgb(255, 255, 255);
+    font-family: Poppins;
+    border: none;
+    font-weight: 700;
+    padding: 10px 24px;
+}
+
+
 /* small device responsive */
 @media screen and (max-width:576px) {
     header {
@@ -370,8 +408,26 @@ main {
 
         padding-right: 0px;
     }
-
-
+    .feature-container{
+        flex-direction: column;
+    }
+    .left-img{
+        width: 100%;
+    }
+    .feature-title {
+        color: rgb(10, 8, 38);
+        font-family: Poppins;
+        font-size: 1.5rem;
+        text-align: center;
+        font-weight: 700;
+    }
+    .feature-description {
+        color: rgb(108, 108, 108);
+        font-family: Poppins;
+        font-weight: 700;
+        width: 329px;
+        height: 138px;
+    }
 
 
 
